# backend/app/handlers/tg_publisher.go
@@ -19,6 +19,16 @@ type BotRequestData struct {
 
 const exception string = "Bot publisher error"
 
+// TelegramPublisherHandler godoc
+// @Summary      Telegram Publisher handler
+// @Description  Publica mensagem em chat do Telegram
+// @Tags         mappa-proxy
+// @Accept       json
+// @Param request body BotRequestData true "Bot request data"
+// @Produce      json
+// @Success      200  {object}  handlers.ReplyMessage
+// @Failure	  	 400  {object}  handlers.ReplyMessage
+// @Router       /tg/pub [post]
 func TelegramPublisherHandler(c *fiber.Ctx) error {
 	botToken := os.Getenv("BOT_TOKEN")
 	if len(botToken) == 0 {
